# starter-snake-python

./: .gitignore  .gitmodules  .replit  CODEOWNERS  CODE_OF_CONDUCT  CONTRIBUTING.md  Dockerfile  LICENSE  Notes.md  Procfile  README.md  _pyproject.toml  a_star_search_test.py  app.json  battlesnake_test.py  behaviour.py  board.py  calculations.py  collision_avoidance.py  constants.py  example_move.json  flood_fill.py  goto.py  hamilton.py  helper_battlesnake.py  helper_functions.py  heuristics.py  main-copy.py  main.py  main_fr.py  minimax.py  moves.py  my_model.py  networkx_tree.py  old.txt  parse.py  pathfind.py  predict.py  pyproject.toml  replit.nix  (+17 more)
.github/workflows/: ci.yml  (+1 more)
app/: Classes.py  a_star.py  api.py  breadth_first_search.py  gunicorn.py  localizer.py  logic.py  main.py  predict_future.py  server.py  wsgi.py
cloud9/: run.sh
content/gym_battlesnake/: CMakeLists.txt
content/gym_battlesnake/examples/: example_singleagent.py
content/gym_battlesnake/gym_battlesnake/src/: threadpool.cpp
docs/: conf.py  modules.rst  server.rst
gym-battlesnake-master/: LICENSE  README.md  setup.py
heuristic_baseline_functions/: one_step_lookahead.py
players/: heuristic_player.py  one_step_lookahead_player.py  random_player.py  self_preserving_player.py  tree_search_player.py
src/: data.json  generator.py  heuristics.py  logic.py  main.py  my_model.py  parse.py  tests.py
starter-snake-python/: Dockerfile  LICENSE  README.md  main.py  requirements.txt  server.py
weights/: weights-200iter-aggressive.pt  weights-200iter.pt  weights-50iter.pt
(+44 files in other folders)
